--- a/autoarbs/package.json
+++ b/autoarbs/package.json
@@ -9,6 +9,8 @@
     "@fontsource/roboto-slab": "^4.5.9",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
